# clisten

./: .gitignore  Cargo.toml  HANDOFF.md  PLAN.md  README.md  prompt.md
.github/workflows/: release.yml
migrations/: 001_init.sql
spec/: 00-overview.md  01-architecture.md  02-data-models.md  03-api-nts.md  04-api-soundcloud.md  05-player.md  06-database.md  07-config.md  08-components.md  09-keybindings.md  10-implementation.md  README.md
src/: action.rs  app.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  theme.rs  tui.rs  ui.rs
src/api/: genres.rs  mod.rs  models.rs  nts.rs
src/app/: actions.rs  fetch.rs  input.rs  mod.rs  playback.rs
src/components/: blob.rs  direct_play_modal.rs  discovery_list.rs  mod.rs  now_playing.rs  onboarding.rs  play_controls.rs  queue_list.rs  search_bar.rs  seek_modal.rs
src/components/nts/: mod.rs
src/components/visualizers/: blob.rs  mod.rs  rings.rs  spectrum.rs  starfield.rs  waveform.rs
src/player/: ipc.rs  mod.rs  queue.rs
tests/: components.rs  database.rs  nts_api.rs  phase1_scaffolding.rs  phase2_nts_core.rs  phase3_nts_discovery.rs  phase5_queue_polish.rs  phase6_refinements.rs  queue_and_app.rs  ui_controls.rs
tests/e2e/: helpers.ts  package-lock.json  package.json  phase1.test.ts  phase2.test.ts  phase3.test.ts  phase5.test.ts  phase6.test.ts
