[package]
name = "clisten"
version = "0.1.0"
edition = "2021"
description = "NTS Radio TUI player"

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
strum = { version = "0.26", features = ["derive"] }
which = "7"

[dev-dependencies]
tempfile = "3"
