[package]
name = "clisten"
version = "0.4.1"
edition = "2021"
description = "Terminal UI for NTS Radio — browse live streams, curated picks, and 120+ genres"
license = "MIT"
repository = "https://github.com/PepijnSenders/clisten"
readme = "README.md"
keywords = ["nts", "radio", "tui", "terminal", "music"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "net", "io-util"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow = "1.0"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
dirs = "5"
which = "7"

[dev-dependencies]
tempfile = "3"
